--- a/index.html
+++ b/index.html
@@ -9,30 +9,32 @@
 </head>
 <body>
 
-    <div class="nintendoswitch">
-        <div class="joyconizq">
-            <div class="menos"></div>
-            <div class="joystickIzq"></div>
-            <div class="arriba"></div>
-            <div class="derecha"></div>
-            <div class="abajo"></div>
-            <div class="izquierda"></div>
-            <div class="captura"></div>
-        </div>
-    
+    <div class="main">
+        <div class="nintendoswitch">
+            <div class="joycon" id="joyconIzq">
+                <div class="gatillo" id="gatilloIzq"></div>
+                <div id="menos"></div>
+                <div class="joystick" id="joystickIzq"></div>
+                <div class="botonesPrinc" id="arriba"></div>
+                <div class="botonesPrinc" id="derecha"></div>
+                <div class="botonesPrinc" id="abajo"></div>
+                <div class="botonesPrinc" id="izquierda"></div>
+                <div class="captura"></div>
+            </div>
 
-        <div class="pantalla"></div>
+            <div class="pantalla"></div>
 
-        <div class="joyconder">
-            <div class="masHorizontal"></div>
-            <div class="masVertical"></div>
-            <div class="botonX">X</div>
-            <div class="botonA">A</div>
-            <div class="botonB"></div>
-            <div class="botonY"></div>
-            <div class="joystickDer"></div>
-            <div class="home"></div>
-
+            <div class="joycon" id="joyconDer">
+                <div class="gatillo" id="gatilloDer"></div>
+                <div id="masHorizontal"></div>
+                <div id="masVertical"></div>
+                <div class="botonesPrinc" id="botonX">X</div>
+                <div class="botonesPrinc" id="botonA">A</div>
+                <div class="botonesPrinc" id="botonB">B</div>
+                <div class="botonesPrinc" id="botonY">Y</div>
+                <div class="joystick" id="joystickDer"></div>
+                <div class="home"></div>
+            </div>
         </div>
     </div>
 
