readme y últimas correcciones

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="botonesPrinc" id="derecha"></div>
                 <div class="botonesPrinc" id="abajo"></div>
                 <div class="botonesPrinc" id="izquierda"></div>
-                <div class="captura"></div>
+                <div id="captura"></div>
             </div>
 
             <div class="pantalla"></div>
@@ -33,7 +33,7 @@
                 <div class="botonesPrinc" id="botonB">B</div>
                 <div class="botonesPrinc" id="botonY">Y</div>
                 <div class="joystick" id="joystickDer"></div>
-                <div class="home"></div>
+                <div id="home"></div>
             </div>
         </div>
     </div>
